# keeb_snakeskin

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/workflows/: publish.yml  test.yml
preset_configs/: basic_macropad.json  corne-cherry.json  ferris.json  lily58.json  maizeless.json  sofle1.json  sofle2.json
src/: default_params.py  generate_pcb_case.py  import_svg.py  snakeskin.py  tenting_stand.py  tentstand.py  tolerance_tests.py
